# octree

./: .gitignore  Cargo.toml  README.md
.github/workflows/: run-tests.yml  run-weekly-tests.yml  style-checks.yml
examples/: battleship.rs  mpi.rs  mpi_coarse_tree.rs  mpi_complete_tree.rs  mpi_cumsum.rs  mpi_global_bounding_box.rs  parallel_tests.rs  parsort.rs
src/: constants.rs  geometry.rs  lib.rs  morton.rs  octree.rs  parallel_octree.rs  parsort.rs  serial.rs  tools.rs  types.rs
src/octree/: implementation.rs  parallel.rs
