[features]
# Treat warnings as a build error.
strict = []
battleship = []

[package]
name = "bempp-octree"
version = "0.0.1-dev"
edition = "2021"
authors = ["Srinath Kailasa <srinathkailasa@gmail.com>, Timo Betcke <timo.betcke@gmail.com>"]
description = "A library to create Octrees"
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/octree"
repository = "https://github.com/bempp/octree"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_octree"
crate-type = ["cdylib", "lib"]

[dependencies]
itertools = "0.13.*"
rand = { version = "0.8.5", features = ["alloc"] }
rand_chacha = "0.3.*"
num = "0.4.*"
bytemuck = "1.*"
vtkio = "0.6.*"
mpi = {version = "0.8.*", features = ["derive", "user-operations"] }

[profile.release]
debug = 1
 
[dev-dependencies]
rand_distr = "0.4.3"
#criterion = { version = "0.5.*", features = ["html_reports"]}

[build-dependencies]
cbindgen = "0.27.0"

[lints.clippy]
wildcard_imports = "forbid"
